# loop-tempo-estimator

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  minimp3.cmake  package-lock.json  package.json  readme.md  vamp-plugin-sdk.cmake
.github/workflows/: benchmark.yml  build.yml  library.yml  release-library.yml  source.yml  test-report.yml  vamp-plugin.yml
ADC-2024/: circular_stft.py  figure_utils.py  flowchart.md  get-bpm-histogram.py  index-back.html  index.html  is_single_event.py  kurtosis.py  logarithmic_compression.py  mermaid_diag_performance_overview.md  possible_tatum_counts.py  presentation.md  print_stft.py  result.json  roc.py  show_gtzan_bpm_histogram.py  tatum_quantization_fit.py  tatum_quantization_fit_pseudocode.py
include/: LoopTempoEstimator.h  LteTypes.h  MirTypes.h  MusicInformationRetrieval.h  PowerSpectrumGetter.h
include/LoopTempoEstimator/: LoopTempoEstimator.h  LteTypes.h
loop-tempo-estimator/: CMakeLists.txt  MirTypes.h  MusicInformationRetrieval.cpp  MusicInformationRetrieval.h  PowerSpectrumGetter.cpp  pffft.cmake
loop-tempo-estimator/include/: PowerSpectrumGetter.h
loop-tempo-estimator/lib-utility/: CMakeLists.txt  MemoryX.cpp
loop-tempo-estimator/lib-utility/tests/: CMakeLists.txt
loop-tempo-estimator/source/: MemoryX.h  MirDsp.h  StftFrameProvider.h
loop-tempo-estimator/tests/: AudioFileIO.cpp  CMakeLists.txt  MathApproxTest.cpp  MirFakes.h  MirTestUtils.h  Mp3FileReader.cpp  Mp3MirAudioReader.cpp  Mp3MirAudioReader.h  MusicInformationRetrievalTests.cpp  TatumQuantizationFitBenchmarking.cpp  TatumQuantizationFitVisualization.cpp  WavMirAudioReader.cpp
loop-tempo-estimator/tests/cmake/: Catch2.cmake
source/: CMakeLists.txt  DecimatingLteAudioReader.cpp  DecimatingLteAudioReader.h  DecimatingMirAudioReader.cpp  DecimatingMirAudioReader.h  GetMeterUsingTatumQuantizationFit.cpp  GetMeterUsingTatumQuantizationFit.h  IteratorX.cpp  IteratorX.h  LoopTempoEstimator.cpp  LteDsp.cpp  LteDsp.h  LteUtils.cpp  LteUtils.h  MathApprox.h  MemoryX.cpp  MirDsp.cpp  MirDsp.h  MirUtils.cpp  MirUtils.h  MusicInformationRetrieval.cpp  PowerSpectrumGetter.cpp  PowerSpectrumGetter.h  StftFrameProvider.cpp  StftFrameProvider.h
tests/: .gitignore  CMakeLists.txt  LteFakes.h  LteTestUtils.cpp  LteTestUtils.h  MirFakes.h  MirTestUtils.cpp  MirTestUtils.h  StftFrameProviderTests.cpp  TatumQuantizationFitBenchmarking.cpp  TatumQuantizationFitVisualization.cpp  TestLteAudioReader.h  WavFileIO.cpp  WavMirAudioReader.cpp  WavMirAudioReader.h  download-benchmarking-dataset.py  readme.md
tests/benchmarking/: CMakeLists.txt  RocTest.cpp  TatumQuantizationFitBenchmarking.cpp  download-benchmarking-dataset.py  readme.md
tests/benchmarking/TatumQuantizationFitBenchmarkingOutput/: .gitignore  AUC.txt  checksum.txt  sampleValues.csv  summary.txt  thresholds.txt
tests/performance/: CMakeLists.txt  TatumQuantizationFitPerformance.cpp
tests/test-utils/: AudioFileIO.cpp  AudioFileIO.h  CMakeLists.txt  LteFakes.h  LteTestUtils.cpp  LteTestUtils.h  Mp3FileReader.cpp  Mp3FileReader.h  TestLteAudioReader.cpp  TestLteAudioReader.h  WavFileIO.cpp  WavFileIO.h
tests/test-utils/cmake/: minimp3.cmake
tests/unit-tests/: CMakeLists.txt  GetBpmTest.cpp  MathApproxTest.cpp  StftFrameProviderTests.cpp
tests/visualization/: CMakeLists.txt  TatumQuantizationFitVisualization.cpp
tests/visualization/TatumQuantizationFitVisualization/: visualize_debug_output.py
vamp-plugin/: CMakeLists.txt  FileUtils.cpp  FileUtils.h  FloatVectorLteAudioReader.cpp  FloatVectorLteAudioReader.h  LoopTempoEstimatorStepsVamp.cpp  LoopTempoEstimatorStepsVamp.h  LoopTempoEstimatorVamp.cpp  LoopTempoEstimatorVamp.h  LteVampBase.cpp  LteVampBase.h  loop-tempo-estimator.cat  loop-tempo-estimator.n3  plugins.cpp
